finished most things, started the user appointment history
